--- a/Maks_telef/Maks_telef/Maks_telef.csproj
+++ b/Maks_telef/Maks_telef/Maks_telef.csproj
@@ -20,6 +20,9 @@
     <EmbeddedResource Update="Boxview_page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="CarouselPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="DateTimePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
