--- a/Maks_telef/Maks_telef.Android/Maks_telef.Android.csproj
+++ b/Maks_telef/Maks_telef.Android/Maks_telef.Android.csproj
@@ -86,7 +86,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\iphone13.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Maks_telef\Maks_telef.csproj">
       <Project>{95260F25-24EC-43D2-99CA-4F9CA3CEFF2F}</Project>
@@ -95,6 +97,15 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\aue.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\huawei.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\iphone7.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\samsung.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
