--- a/Maks_telef/Maks_telef/Maks_telef.csproj
+++ b/Maks_telef/Maks_telef/Maks_telef.csproj
@@ -29,6 +29,9 @@
     <EmbeddedResource Update="FramePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="list_page.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="lumimemm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
