--- a/Maks_telef/Maks_telef/Maks_telef.csproj
+++ b/Maks_telef/Maks_telef/Maks_telef.csproj
@@ -41,6 +41,9 @@
     <EmbeddedResource Update="RGBslider.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="riigid.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="smsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
